--- a/TheList/TheList.cabal
+++ b/TheList/TheList.cabal
@@ -21,6 +21,7 @@ library
                      Settings.Development
                      Handler.Home
                      Handler.AllUsers
+                     Handler.UserById
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
