--- a/TheList/TheList.cabal
+++ b/TheList/TheList.cabal
@@ -22,6 +22,7 @@ library
                      Handler.Home
                      Handler.AllUsers
                      Handler.UserById
+                     Handler.Rating
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
