--- a/TheList/TheList.cabal
+++ b/TheList/TheList.cabal
@@ -23,6 +23,7 @@ library
                      Handler.AllUsers
                      Handler.UserById
                      Handler.Rating
+                     Handler.AllTrans
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
