--- a/TheList/TheList.cabal
+++ b/TheList/TheList.cabal
@@ -28,6 +28,7 @@ library
                      Handler.AuthCurrentId
                      Handler.TransById
                      Handler.AddTransaction
+                     Handler.EditTransaction
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
