--- a/TheList/TheList.cabal
+++ b/TheList/TheList.cabal
@@ -24,6 +24,7 @@ library
                      Handler.UserById
                      Handler.Rating
                      Handler.Offers
+                     Handler.RescindOffer
                      Handler.AllTrans
                      Handler.AuthCurrentId
                      Handler.TransById
